# EindOpdracht

./: .gitignore  Capstone.html  Capstone.qmd  Capstone.tex  ECH_Play2.py  pyproject.toml
src/: Categorize.py  Dashboard.py  Power_split.py  dash_settings.py  dashboard.py  load_data.py  main.py  merge.py  preprocess.py  settings.py  test.py  truck_state.py
