[tool.poetry]
name = "eindopdracht"
version = "0.1.0"
description = ""
authors = ["Frank Meskes <frank.meskes@syudent.hu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pydantic = "^1.10.6"
black = "^23.1.0"
asammdf = "^7.3.2"
quarto = "^0.1.0"
scipy = "^1.10.1"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
